--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
+    "framer-motion": "^12.34.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
